ci: EC2로의 자동 빌드 및 배포를 위한 CI/CD 파이프라인 설정